--- a/app.json
+++ b/app.json
@@ -1,4 +1,24 @@
 {
-  "name": "ListaGolden",
-  "displayName": "ListaGolden"
+  "expo": {
+    "name": "ListaGolden",
+    "slug": "ListaGolden",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "scheme": "myapp",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "ios": {
+      "supportsTablet": true
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "single",
+      "favicon": "./assets/images/favicon.png"
+    },
+    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "experiments": {
+      "typedRoutes": true
+    }
+  }
 }
