--- a/package.json
+++ b/package.json
@@ -10,15 +10,39 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-vector-icons/evil-icons": "^12.0.1",
+    "@react-native-vector-icons/fontawesome6": "^12.0.1",
+    "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/stack": "^7.4.2",
+    "@supabase/supabase-js": "^2.50.2",
+    "lucide-react-native": "^0.525.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "@react-native/new-app-screen": "0.80.1"
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-hyperlink": "^0.0.22",
+    "react-native-maps": "^1.24.3",
+    "react-native-permissions": "^5.4.1",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
+    "react-native-svg-pan-zoom": "^0.1.2",
+    "react-native-svg-transformer": "^1.5.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-video": "^6.16.1",
+    "react-native-vision-camera": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "19.0.0",
+    "@react-native-community/cli": "latest",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
     "@react-native/babel-preset": "0.80.1",
