--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,6 +23,8 @@ EXPERIMENTAL_ENABLE_CODEGEN=false
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+VisionCamera_enableCodeScanner=true
+VisionCamera_enableFrameProcessors=true
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
