--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
       <meta-data
       android:name="com.google.android.geo.API_KEY"
       android:value="AIzaSyAA_eTTEBTHi1wujIDfSra6c3oR27j9Tk4" />
-
+      <meta-data
+       android:name="com.google.android.gms.version"
+       android:value="@integer/google_play_services_version" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
