--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
     "@supabase/supabase-js": "^2.50.2",
+    "axios": "^1.11.0",
     "lucide-react-native": "^0.525.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-hyperlink": "^0.0.22",
+    "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-keychain": "^10.0.0",
     "react-native-maps": "^1.24.3",
     "react-native-permissions": "^5.4.1",
     "react-native-qrcode-scanner": "^1.5.5",
