--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-svg-transformer": "^1.5.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-video": "^6.16.1",
-    "react-native-vision-camera": "^4.7.0"
+    "react-native-vision-camera": "^4.7.0",
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -51,7 +52,7 @@
     "@react-native/babel-preset": "0.80.1",
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
-    "@react-native/typescript-config": "0.80.1",
+    "@react-native/typescript-config": "^0.80.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
